--- a/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -1,7 +1,8 @@
 {{ if (eq .chezmoi.os "darwin") -}}
 #!/usr/bin/env bash
 
-set -eufo pipefail
+set -e
+set -o pipefail
 
 # assembled from:
 # https://github.com/mathiasbynens/dotfiles/blob/main/.macos
@@ -19,9 +20,6 @@ set -eufo pipefail
 
 echo "Applying MacOS settings"
 
-COMPUTER_NAME={{ .hostname }}
-echo "Using computer name: $COMPUTER_NAME"
-
 # Ask for the administrator password up front, and use keep-alive for sudo
 sudo -v
 
@@ -30,10 +28,24 @@ while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
 
 osascript -e 'tell application "System Preferences" to quit'
 
-# Set computer name (as done via System Preferences → Sharing)
-sudo scutil --set ComputerName "$COMPUTER_NAME"
-sudo scutil --set HostName "$COMPUTER_NAME"
-sudo scutil --set LocalHostName "$COMPUTER_NAME"
+# ==================
+# Name of computer
+# ==================
+
+ComputerName=$(sudo scutil --get ComputerName)
+if [[ $ComputerName != ham* ]]; then
+  ComputerName="hammac$(date +%Y)"
+fi
+
+read -p "What is this computer's name (default \"$ComputerName\")? " newName
+if [[ ! -z  "$newName" ]]; then
+  ComputerName=$newName
+fi
+
+echo "Changing computer name to: $ComputerName"
+sudo scutil --set ComputerName "$ComputerName"
+sudo scutil --set HostName "$ComputerName"
+sudo scutil --set LocalHostName "$ComputerName"
 sudo defaults write /Library/Preferences/SystemConfiguration/com.apple.smb.server NetBIOSName -string "$COMPUTER_NAME"
 
 # ===================
@@ -239,13 +251,13 @@ defaults write com.apple.dock magnification -int 1
 # Change minimize/maximize window effect
 defaults write com.apple.dock mineffect -string "scale"
 
-# Don’t animate opening applications from the Dock
+# Do not animate opening applications from the Dock
 defaults write com.apple.dock launchanim -bool false
 
 # Disable Dashboard
 defaults write com.apple.dashboard mcx-disabled -bool true
 
-# Don’t automatically rearrange Spaces based on most recent use
+# Do not automatically rearrange Spaces based on most recent use
 defaults write com.apple.dock mru-spaces -bool false
 
 # Show recent applications in Dock
@@ -287,4 +299,32 @@ defaults write com.apple.SoftwareUpdate CriticalUpdateInstall -int 1
 # todo how to make notifications turn off almost always?
 # launchctl unload -w /System/Library/LaunchAgents/com.apple.notificationcenterui.plist 2> /dev/null
 
+# ===========================
+# Screen capture
+# ===========================
+
+# Save screenshots in PNG format (other options: BMP, GIF, JPG, PDF, TIFF)
+defaults write com.apple.screencapture type -string "png"
+
+# Disable shadow in screenshots
+defaults write com.apple.screencapture disable-shadow -bool true
+
+# Save location for the screenshots
+mkdir -p "${HOME}/Screenshots"
+defaults write com.apple.screencapture location -string "${HOME}/Screenshots"
+
+
+# ============================
+# apps
+# ============================
+
+echo "Setting Maccy defaults"
+defaults write org.p0deje.Maccy ~/.local/share/chezmoi/.chezmoiscripts/darwin/Maccy.defaults.plist
+
+# ================
+# change /var/log to be writable
+# ================
+sudo chmod 755 /var/log
+
+echo "Done. Note that some of these changes require a logout/restart to take effect."
 {{ end -}}
