--- a/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -398,7 +398,7 @@ defaults write com.apple.screencapture location -string "${HOME}/Screenshots"
 # ============================
 
 echo "Setting Maccy defaults"
-defaults write org.p0deje.Maccy ~/.local/share/chezmoi/.chezmoiscripts/darwin/Maccy.defaults.plist
+defaults write org.p0deje.Maccy ~/.local/share/chezmoi/macos/Maccy.defaults.plist
 
 # =======================
 # Chrome
