--- a/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -101,9 +101,9 @@ killall SystemUIServer
 # Quarantine
 # =====================
 
-# Enable applications installed from Internet to run without restrictions
-# Then go to System Preferences -> Security and Privacy. And enable "Run applications -> Allow from anywhere"
-sudo spctl --master-disable
+# Enable applications installed from known developers
+# Then go to System Preferences -> Security and Privacy. And enable "Run applications -> App store and known developers"
+# sudo spctl --master-disable # this sets to allow apps from Anywhere
 
 # Enable the “Are you sure you want to open this application?” dialog
 defaults write com.apple.LaunchServices LSQuarantine -bool false
