--- a/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -3,7 +3,7 @@
 
 set -e
 set -o pipefail
-# set -x # trace for debugging
+set -x # trace for debugging
 
 # assembled from:
 # https://github.com/mathiasbynens/dotfiles/blob/main/.macos
@@ -95,7 +95,7 @@ defaults write com.apple.systemuiserver menuExtras -array \
 "/System/Library/CoreServices/Menu Extras/Bluetooth.menu" \
 "/System/Library/CoreServices/Menu Extras/Clock.menu" \
 "/System/Library/CoreServices/Menu Extras/Volume.menu"
-killall SystemUIServer
+sudo killall SystemUIServer
 
 # =====================
 # Quarantine
@@ -343,8 +343,8 @@ defaults write com.apple.dock show-recents -bool false
 
 # make dock hide a long time; unhide with command-option-D 
 # according to https://apple.stackexchange.com/questions/59556/is-there-a-way-to-completely-disable-dock
-defaults write com.apple.dock autohide-delay -float 6; killall Dock
-defaults write com.apple.Dock appswitcher-all-displays -bool true; killall Dock
+defaults write com.apple.dock autohide-delay -float 6; sudo killall Dock
+defaults write com.apple.Dock appswitcher-all-displays -bool true; sudo killall Dock
 
 # ======================================
 # Activity monitor
@@ -376,7 +376,7 @@ defaults write com.apple.SoftwareUpdate CriticalUpdateInstall -int 1
 # 10am = 10 * 60 = 600; 11am = 660
 defaults -currentHost write ~/Library/Preferences/ByHost/com.apple.notificationcenterui dndEnd -integer 600
 defaults -currentHost write ~/Library/Preferences/ByHost/com.apple.notificationcenterui dndStart -integer 660
-killall NotificationCenter # 'resets' Notification Center so that it reads the DND change
+sudo killall NotificationCenter # 'resets' Notification Center so that it reads the DND change
 echo "Do Not Disturb is enabled from 11am, turning off next day at 10am, so only 1 hour per day with notifications
 
 # ===========================
