change vs code extension

--- a/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
@@ -16,7 +16,7 @@
      "ms-vscode.vscode-typescript-tslint-plugin"
      "prateekmahendrakar.prettyxml"
      "redhat.vscode-yaml"
-     "stkb.rewrap"
+     "dnut.rewrap-revived"
      "streetsidesoftware.code-spell-checker"
      "twpayne.vscode-testscript"
      "Tyriar.sort-lines"
