--- a/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
@@ -1,7 +1,7 @@
 {{ if and (eq .chezmoi.os "darwin" "linux") (not .headless) -}}
 
 {{ $extensions := list
-     "bungcip.better-toml"
+     "tamasfe.even-better-toml"
      "eamodio.gitlens"
      "EditorConfig.EditorConfig"
      "golang.go"
@@ -13,7 +13,7 @@
      "ms-vscode-remote.remote-ssh-edit"
      "ms-vscode-remote.vscode-remote-extensionpack"
      "ms-vscode.cpptools"
-     "ms-vscode.vscode-typescript-tslint-plugin"
+     "dbaeumer.vscode-eslint"
      "prateekmahendrakar.prettyxml"
      "redhat.vscode-yaml"
      "dnut.rewrap-revived"
