--- a/.chezmoiscripts/darwin/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before_install-packages.sh.tmpl
@@ -15,6 +15,8 @@ while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
 
 brew bundle --file=$HOME/.local/share/chezmoi/dot_brewfile/Brewfile.local
 
+mkdir $HOME/workspace
+
 # todo python via pyenv?
 
 {{ end -}}
