killall can fail if run back-to-back after killing named (system-restarted) process

--- a/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -343,7 +343,7 @@ defaults write com.apple.dock show-recents -bool false
 
 # make dock hide a long time; unhide with command-option-D 
 # according to https://apple.stackexchange.com/questions/59556/is-there-a-way-to-completely-disable-dock
-defaults write com.apple.dock autohide-delay -float 6; sudo killall Dock
+defaults write com.apple.dock autohide-delay -float 6;
 defaults write com.apple.Dock appswitcher-all-displays -bool true; sudo killall Dock
 
 # ======================================
