--- a/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_after_configure.sh.tmpl
@@ -397,8 +397,8 @@ defaults write com.apple.screencapture location -string "${HOME}/Screenshots"
 # apps
 # ============================
 
-echo "Setting Maccy defaults"
-defaults write org.p0deje.Maccy ~/.local/share/chezmoi/macos/Maccy.defaults.plist
+# defaults export org.p0deje.Maccy - > ~/workspace/dotfiles/macos/Maccy.defaults.orig.plist
+defaults import org.p0deje.Maccy -  < ~/.local/share/chezmoi/macos/Maccy.defaults.plist
 
 # =======================
 # Chrome
